--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -80,5 +80,6 @@
 </form>
 <script type="text/javascript" src="{{ url_for('static', filename='lib/zepto.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/validator.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
